--- a/HealthCareSystem/src/healthcaresystem/AddIndustrialManager.form
+++ b/HealthCareSystem/src/healthcaresystem/AddIndustrialManager.form
@@ -208,7 +208,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jSeparator15" min="-2" pref="168" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="jComboBox1" min="-2" pref="168" max="-2" attributes="0"/>
+                                  <Component id="designation" min="-2" pref="168" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="des" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
@@ -500,14 +500,6 @@
                                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace min="0" pref="1" max="32767" attributes="0"/>
-                                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                              <Component id="jLabel21" alignment="1" max="32767" attributes="0"/>
-                                              <Component id="jLabel19" alignment="1" max="32767" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" alignment="1" attributes="0">
                                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -524,11 +516,7 @@
                                                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
-                                                  <Group type="103" groupAlignment="1" attributes="0">
-                                                      <Component id="pas" min="-2" pref="26" max="-2" attributes="0"/>
-                                                      <Component id="p" min="-2" pref="25" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                                                   <Component id="jSeparator14" min="-2" pref="15" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
@@ -559,7 +547,7 @@
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="des" min="-2" pref="25" max="-2" attributes="0"/>
                                                       <Group type="102" attributes="0">
-                                                          <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="designation" min="-2" max="-2" attributes="0"/>
                                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                                           <Component id="jSeparator15" min="-2" pref="15" max="-2" attributes="0"/>
                                                       </Group>
@@ -567,6 +555,20 @@
                                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                               </Group>
                                           </Group>
+                                      </Group>
+                                      <Group type="102" alignment="1" attributes="0">
+                                          <EmptySpace min="0" pref="1" max="32767" attributes="0"/>
+                                          <Group type="103" groupAlignment="1" attributes="0">
+                                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                                  <Component id="jLabel21" alignment="1" max="32767" attributes="0"/>
+                                                  <Component id="jLabel19" alignment="1" max="32767" attributes="0"/>
+                                              </Group>
+                                              <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                                  <Component id="p" min="-2" pref="25" max="-2" attributes="0"/>
+                                                  <Component id="pas" min="-2" pref="26" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -1365,7 +1367,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="designation">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="1">
@@ -1373,6 +1375,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="designationMousePressed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
