--- a/HealthCareSystem/src/healthcaresystem/AddWorker.form
+++ b/HealthCareSystem/src/healthcaresystem/AddWorker.form
@@ -1190,6 +1190,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel23MouseClicked"/>
+                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel23MouseEntered"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel24">
